# api-extract

./: LICENSE  prompt.txt  pyproject.toml  summarize_docs.py
summary/: imod-evaluate.rst  imod-flow.rst  imod-metamod.rst  imod-mf6-examples.py  imod-mf6.rst  imod-msw.rst  imod-prepare.rst  imod-select.rst  imod-util.rst  imod-visualize.rst  imod-wq.rst  pandamesh-examples.py  pandamesh.rst  xugrid-examples.py  xugrid.rst
